force-app/main/default/objects/Git_Hub_Details__c/Git_Hub_Details__c.object-meta.xml
<CustomObject>
    <label>Git Hub Detail</label>
    <nameField>
        <displayFormat>GH-{0000}</displayFormat>
        <label>Git Hub Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Git Hub Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>