force-app/main/default/objects/Git_Hub_Details__c/fields/Added_Component__c.field-meta.xml
<CustomField>
    <fullName>Added_Component__c</fullName>
    <label>Added Component</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>