force-app/main/default/objects/Git_Hub_Details__c/fields/Commit_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Commit_Time_Stamp__c</fullName>
    <label>Commit Time Stamp</label>
    <type>TextArea</type>
</CustomField>