force-app/main/default/objects/Git_Hub_Details__c/fields/Commited_Url__c.field-meta.xml
<CustomField>
    <fullName>Commited_Url__c</fullName>
    <label>Commited Url</label>
    <type>TextArea</type>
</CustomField>