force-app/main/default/objects/Git_Hub_Details__c/fields/Commiter_Name__c.field-meta.xml
<CustomField>
    <fullName>Commiter_Name__c</fullName>
    <label>Commiter Name</label>
    <type>TextArea</type>
</CustomField>