force-app/main/default/objects/Git_Hub_Details__c/fields/Modified_Components__c.field-meta.xml
<CustomField>
    <fullName>Modified_Components__c</fullName>
    <label>Modified Components</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>