force-app/main/default/objects/Git_Hub_Details__c/fields/Removed_Components__c.field-meta.xml
<CustomField>
    <fullName>Removed_Components__c</fullName>
    <label>Removed Components</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>