force-app/main/default/objects/Git_Hub_Details__c/fields/Repository_Name__c.field-meta.xml
<CustomField>
    <fullName>Repository_Name__c</fullName>
    <label>Repository Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>