force-app/main/default/objects/Git_Hub_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Commiter_Name__c</columns>
    <columns>Commiter_Email__c</columns>
    <columns>Repository_Name__c</columns>
    <columns>Commited_Url__c</columns>
    <columns>Commit_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>